beginners section readme

--- a/Beginner/00 Installing Python and Virtualenvs.ipynb
+++ b/Beginner/00 Installing Python and Virtualenvs.ipynb
@@ -4,6 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# PyCon Nove Beginner's Day\n",
+    "Before using the notebooks please install Python and Virtualenv according to your operating system"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Installation Guides\n",
     "These guides go over the proper installation of Python for development purposes, as well as setuptools, pip and virtualenv."
    ]
@@ -238,7 +246,11 @@
     "\n",
     "```\n",
     "$ deactivate\n",
-    "```\n"
+    "```\n",
+    "\n",
+    "Now let's install `jupyter notebook`:\n",
+    "\n",
+    "`pip3 install jupyter`"
    ]
   },
   {
@@ -246,6 +258,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Python 3 on Windows\n",
+    "\n",
+    "\n",
     "First check whether your computer is running a 32-bit version or a 64-bit version of Windows, by pressing the Windows key + Pause/Break key which will open your System info, and look at the \"System type\" line. You can download Python for Windows from the website https://www.python.org/downloads/windows/. Click on the \"Latest Python 3 Release - Python x.x.x\" link. If your computer is running a 64-bit version of Windows, download the Windows x86-64 executable installer. Otherwise, download the Windows x86 executable installer. After downloading the installer, you should run it (double-click on it) and follow the instructions there.\n",
     "\n",
     "One thing to watch out for: During the installation, you will notice a window marked \"Setup\". Make sure you tick the \"Add Python 3.6 to PATH\" checkbox and click on \"Install Now\", as shown here:\n",
@@ -265,7 +280,46 @@
     "install an older version of Python, e.g., 3.4.6.\n",
     "If you install an older version of Python, the installation screen may look a bit different than shown above. Make sure you scroll down to see \"Add python.exe to Path\", then click the button on the left and pick \"Will be installed on local hard drive\":\n",
     "\n",
-    "Add Python to the Path, older versions"
+    "<img src='https://tutorial.djangogirls.org/en/python_installation/images/add_python_to_windows_path.png'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Virtual environment\n",
+    "Before installing software via pip we will get you to install an extremely useful tool to help keep your coding environment tidy on your computer. It's possible to skip this step, but it's highly recommended. Starting with the best possible setup will save you a lot of trouble in the future!\n",
+    "\n",
+    "So, let's create a virtual environment (also called a virtualenv). Virtualenv will isolate your Python setup on a per-project basis. This means that any changes you make to one website won't affect any others you're also developing. Neat, right?\n",
+    "\n",
+    "All you need to do is find a directory in which you want to create the virtualenv; your home directory, for example. On Windows, it might look like C:\\Users\\Name\\ (where Name is the name of your login).\n",
+    "\n",
+    "NOTE: On Windows, make sure that this directory does not contain accented or special characters; if your username contains accented characters, use a different directory, for example, C:\\myproject."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To create a new virtualenv, you need to open the command prompt and run python -m venv myvenv. It will look like this:\n",
+    "\n",
+    "```\n",
+    "C:\\Users\\Name\\envs> python -m venv myvenv\n",
+    "```\n",
+    "\n",
+    "Where myvenv is the name of your virtualenv. You can use any other name, but stick to lowercase and use no spaces, accents or special characters. It is also good idea to keep the name short – you'll be referencing it a lot!\n",
+    "\n",
+    "The command above will create a directory called myvenv (or whatever name you chose) that contains our virtual environment (basically a bunch of directory and files).\n",
+    "\n",
+    "Start your virtual environment by running:\n",
+    "\n",
+    "```\n",
+    "C:\\Users\\Name\\djangogirls> myvenv\\Scripts\\activate\n",
+    "```\n",
+    "\n",
+    "Now let's install `jupyter notebook`:\n",
+    "\n",
+    "`C:\\Users\\Name\\djangogirls> pip3 install jupyter`"
    ]
   },
   {
