renamed and re-indexed notebooks

--- a/2. Intermediate/05 Classes and OOP.ipynb
+++ b/2. Intermediate/05 Classes and OOP.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -166,22 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<__main__.Rocket object at 0x7f6f50c39190>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Rocket():\n",
     "    # Rocket simulates a rocket ship for a game,\n",
@@ -225,24 +217,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rocket altitude: 0\n",
-      "Rocket altitude: 1\n",
-      "Rocket altitude: 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Rocket():\n",
     "    # Rocket simulates a rocket ship for a game,\n",
@@ -303,26 +285,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<__main__.Rocket object at 0x7f6f5073cd10>\n",
-      "<__main__.Rocket object at 0x7f6f5073cc90>\n",
-      "<__main__.Rocket object at 0x7f6f5073cbd0>\n",
-      "<__main__.Rocket object at 0x7f6f5077e410>\n",
-      "<__main__.Rocket object at 0x7f6f5077ead0>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Rocket():\n",
     "    # Rocket simulates a rocket ship for a game,\n",
@@ -356,31 +326,20 @@
     }
    },
    "source": [
-    "You can see that each rocket is at a separate place in memory. By the way, if you understand [list comprehensions](03_lists_tuples.html#comprehensions), you can make the fleet of rockets in one line:"
+    "You can see that each rocket is at a separate place in memory. \n",
+    "By the way, if you understand [list comprehensions](03 Comprehensions.ipynb), you can make the fleet of rockets in one line:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<__main__.Rocket object at 0x7f6f50789190>\n",
-      "<__main__.Rocket object at 0x7f6f50763450>\n",
-      "<__main__.Rocket object at 0x7f6f507634d0>\n",
-      "<__main__.Rocket object at 0x7f6f50763510>\n",
-      "<__main__.Rocket object at 0x7f6f50763550>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Rocket():\n",
     "    # Rocket simulates a rocket ship for a game,\n",
@@ -416,26 +375,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rocket altitude: 1\n",
-      "Rocket altitude: 0\n",
-      "Rocket altitude: 0\n",
-      "Rocket altitude: 0\n",
-      "Rocket altitude: 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Rocket():\n",
     "    # Rocket simulates a rocket ship for a game,\n",
@@ -657,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -684,7 +631,7 @@
     }
    },
    "source": [
-    "The first line shows how a class is created in Python. The keyword **class** tells Python that you are about to define a class. The rules for naming a class are the same rules you learned about [naming variables](var_string_num.html#naming_rules), but there is a strong convention among Python programmers that classes should be named using CamelCase. If you are unfamiliar with CamelCase, it is a convention where each letter that starts a word is capitalized, with no underscores in the name. The name of the class is followed by a set of parentheses. These parentheses will be empty for now, but later they may contain a class upon which the new class is based."
+    "The first line shows how a class is created in Python. The keyword **class** tells Python that you are about to define a class. The rules for naming a class are the same rules you learned about naming variables, but there is a strong convention among Python programmers that classes should be named using CamelCase. If you are unfamiliar with CamelCase, it is a convention where each letter that starts a word is capitalized, with no underscores in the name. The name of the class is followed by a set of parentheses. These parentheses will be empty for now, but later they may contain a class upon which the new class is based."
    ]
   },
   {
@@ -746,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -774,7 +721,7 @@
     }
    },
    "source": [
-    "A method is just a function that is part of a class. Since it is just a function, you can do anything with a method that you learned about with functions. You can accept [positional](08_more_functions.html#positional_arguments) arguments, [keyword](08_more_functions.html#keyword_arguments) arguments, an arbitrary [list of argument values](08_more_functions.html#arbitrary_sequence), an arbitrary [dictionary of arguments](08_more_functions.html#arbitrary_keyword_arguments), or any combination of these. Your arguments can return a value or a set of values if you want, or they can just do some work without returning any values."
+    "A method is just a function that is part of a class. Since it is just a function, you can do anything with a method that you learned about with functions. You can accept [positional](04 More Functions.ipynb#positional_arguments) arguments, [keyword](08_more_functions.html#keyword_arguments) arguments, an arbitrary [list of argument values](04 More Functions.ipynb#arbitrary_sequence), an arbitrary [dictionary of arguments](04 More Functions.ipynb#arbitrary_keyword_arguments), or any combination of these. Your arguments can return a value or a set of values if you want, or they can just do some work without returning any values."
    ]
   },
   {
@@ -801,24 +748,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rocket altitude: 0\n",
-      "Rocket altitude: 1\n",
-      "Rocket altitude: 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Rocket():\n",
     "    # Rocket simulates a rocket ship for a game,\n",
@@ -904,26 +841,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<__main__.Rocket object at 0x7f6f50763090>\n",
-      "<__main__.Rocket object at 0x7f6f5077ead0>\n",
-      "<__main__.Rocket object at 0x7f6f50763990>\n",
-      "<__main__.Rocket object at 0x7f6f50763a10>\n",
-      "<__main__.Rocket object at 0x7f6f50763a50>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Rocket():\n",
     "    # Rocket simulates a rocket ship for a game,\n",
@@ -962,26 +887,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<__main__.Rocket object at 0x7f6f50763990>\n",
-      "<__main__.Rocket object at 0x7f6f50763a10>\n",
-      "<__main__.Rocket object at 0x7f6f50763750>\n",
-      "<__main__.Rocket object at 0x7f6f506fd8d0>\n",
-      "<__main__.Rocket object at 0x7f6f506fd6d0>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Rocket():\n",
     "    # Rocket simulates a rocket ship for a game,\n",
@@ -1199,24 +1112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rocket 0 is at (0, 0).\n",
-      "Rocket 1 is at (0, 10).\n",
-      "Rocket 2 is at (100, 0).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Rocket():\n",
     "    # Rocket simulates a rocket ship for a game,\n",
@@ -1279,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1317,24 +1220,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rocket 0 is at (0, 1).\n",
-      "Rocket 1 is at (10, 10).\n",
-      "Rocket 2 is at (-10, 0).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Rocket():\n",
     "    # Rocket simulates a rocket ship for a game,\n",
@@ -1403,22 +1296,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The rockets are 11.180340 units apart.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from math import sqrt\n",
     "\n",
@@ -1727,22 +1612,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<__main__.Shuttle object at 0x7f1e62ba6cd0>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from math import sqrt\n",
     "\n",
@@ -1901,7 +1778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1937,7 +1814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1957,7 +1834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1984,29 +1861,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shuttle 0 has completed 8 flights.\n",
-      "Shuttle 1 has completed 6 flights.\n",
-      "Shuttle 2 has completed 9 flights.\n",
-      "\n",
-      "\n",
-      "The first shuttle is 0.000000 units away from shuttle 0.\n",
-      "The first shuttle is 40.199502 units away from shuttle 1.\n",
-      "The first shuttle is 30.886890 units away from shuttle 2.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Show the number of flights completed for each shuttle.\n",
     "for index, shuttle in enumerate(shuttles):\n",
@@ -2022,26 +1884,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "The first shuttle is 40.311289 units away from rocket 0.\n",
-      "The first shuttle is 15.556349 units away from rocket 1.\n",
-      "The first shuttle is 76.694198 units away from rocket 2.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"\\n\")\n",
     "# Show the distance from the first shuttle to all other rockets.\n",
@@ -2184,7 +2034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -2231,22 +2081,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The rocket is at (0, 0).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Save as rocket_game.py\n",
     "from rocket import Rocket\n",
@@ -2371,25 +2213,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The rocket is at (0, 0).\n",
-      "\n",
-      "The shuttle is at (0, 0).\n",
-      "The shuttle has completed 0 flights.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Save as rocket_game.py\n",
     "from rocket import Rocket, Shuttle\n",
@@ -2477,25 +2308,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The rocket is at (0, 0).\n",
-      "\n",
-      "The shuttle is at (0, 0).\n",
-      "The shuttle has completed 0 flights.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Save as rocket_game.py\n",
     "import rocket\n",
@@ -2611,25 +2431,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The rocket is at (0, 0).\n",
-      "\n",
-      "The shuttle is at (0, 0).\n",
-      "The shuttle has completed 0 flights.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Save as rocket_game.py\n",
     "import rocket as rocket_module\n",
@@ -2768,7 +2577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -2801,24 +2610,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "15\n",
-      "20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from multiplying import double, triple, quadruple\n",
     "\n",
@@ -2840,24 +2639,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "15\n",
-      "20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import multiplying\n",
     "\n",
@@ -2879,24 +2668,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "15\n",
-      "20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import multiplying as m\n",
     "\n",
@@ -2918,24 +2697,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "15\n",
-      "20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from multiplying import *\n",
     "\n",
@@ -3002,7 +2771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -3037,27 +2806,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MRO:  [<class '__main__.C'>, <class '__main__.A'>, <class '__main__.B'>, <class '__main__.GreatB'>, <class 'object'>]\n",
-      "c.a:  A\n",
-      "c.b:  B\n",
-      "Greetings from Type:  <class '__main__.C'>\n",
-      "Greetings from Type:  <class '__main__.C'>\n",
-      "Greetings from Type:  <class '__main__.C'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class A:\n",
     "    def __init__(self, a):\n",
@@ -3093,7 +2849,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -3107,9 +2863,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
